Fix determination if pre first release or not

--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -18,7 +18,7 @@ jobs:
         id: get_version
         run: |
           latest_version=$(curl -s "https://api.github.com/repos/${{ vars.DOCKERHUB_REPOSITORY }}/releases/latest" | jq -r .tag_name)
-          if [[ -n "$latest_version" ]]; then
+          if [[ $latest_version = 'null' ]]; then
             latest_version=$(curl -s "https://api.github.com/repos/${{ vars.DOCKERHUB_REPOSITORY }}/releases" | jq -r 'map(select(.prerelease)) | first | .tag_name')
           fi
           echo "latest_version=$latest_version" >> $GITHUB_ENV
