--- a/.github/workflows/docker_build_push.yaml
+++ b/.github/workflows/docker_build_push.yaml
@@ -25,9 +25,16 @@ jobs:
           echo "Latest version: $latest_version"
 
       - name: Checkout Repository
+        if: ${{ env.BRANCH_NAME == 'main' }}
         uses: actions/checkout@v3
         with:
           ref: ${{ env.latest_version }}
+
+      - name: Checkout Repository from dev
+        if: ${{ env.BRANCH_NAME != 'main' }}
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ env.BRANCH_NAME }}
 
       - name: Get Build Number from Docker Hub
         id: get_build_number
