--- a/.github/workflows/update_dockerhub_readme.yaml
+++ b/.github/workflows/update_dockerhub_readme.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          ref: main
 
       - name: Update DockerHub description using API
         uses: peter-evans/dockerhub-description@v4
